# sql-dataops-portfolio

./: .gitignore  DATASET_NOTICE.md  Makefile  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
bi_exports/current/: ads_category_performance.csv  ads_customer_segments.csv  ads_daily_trend.csv  ads_dataops_health.csv  ads_executive_kpis.csv  ads_hourly_behavior.csv  ads_order_status.csv  ads_sequential_funnel.csv  manifest.json
dashboard/: __init__.py  app.py  data_loader.py  requirements.txt
data/raw/: README.md
docs/: architecture.md  data_lineage.md  enterprise_dataops_playbook_zh.md  full_data_runbook.md  interview_script_zh.md  jd_evidence_matrix.md  metric_dictionary.md  resume_bullets.md  showcase_and_recording_guide_zh.md
ecommerce_dataops/: __init__.py  cli.py  demo_data.py  input_contract.py  pipeline.py  settings.py  smoke.py  spark_runtime.py  sql_utils.py
scripts/: bootstrap_macos.sh  build_pages_site.py  build_portfolio_zip.py  install_jdk.py  recording_demo.sh
site/: app.js  index.html  styles.css
sql/: 00_raw.sql  10_ods.sql  20_dwd.sql  30_dws_activity.sql  31_dws_users.sql  32_dws_categories.sql  40_ads.sql  90_quality.sql
tableau/: ACCEPTANCE_CHECKLIST.md  BUILD_GUIDE.md  CSV_DATA_DICTIONARY.md  DASHBOARD_SPEC.md  README.md
tests/integration/: test_pipeline_e2e.py
tests/ui/: test_dashboard.py
tests/unit/: test_atomic_publish.py  test_build_pages_site.py  test_build_portfolio_zip.py  test_demo_data.py  test_input_contract.py  test_install_jdk.py  test_ods_validation_contract.py  (+2 more)
