[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-six-table-dataops"
version = "0.1.0"
description = "A local SparkSQL/Hive DataOps portfolio project for six-table e-commerce analytics."
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --basetemp=.pytest-tmp"
